# melvin

./: .gitignore  stack.xml
2dnav_segbot/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
2dnav_segbot/launch/: segbot.launch
2dnav_segbot/src/: main.cpp
2dnav_segbot/udev-rules/: 99-segbot.rules
base_sim_controller/: CMakeLists.txt  base_sim_controller.launch  controller_plugins.xml  manifest.xml  package.xml
base_sim_controller/config/: base_sim_controller.yaml
base_sim_controller/src/: base_sim_controller.cpp
command_velocity_filter/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
command_velocity_filter/config/: command_velocity_filter_config.yaml
command_velocity_filter/launch/: command_velocity_filter.launch
command_velocity_filter/src/: command_velocity_filter.cpp
exploration_planner/: CMakeLists.txt  bgp_plugin.xml  manifest.xml  package.xml
exploration_planner/launch/: test_exploration.launch
exploration_planner/src/: astarpoint.cpp  exploration_planner.cpp  filetransfer.cpp  global_planner.cpp  raycaster.cpp  send_dummy_goals.cpp
exploration_planner/worlds/: map_params.yaml
gps_for_ekf/: CMakeLists.txt  manifest.xml  package.xml
gps_for_ekf/launch/: gps_for_ekf_node.launch
gps_for_ekf/src/: gps_for_ekf.cpp
melvin/: CMakeLists.txt  package.xml
pd_local_planner/: CMakeLists.txt  README.md  blp_plugin.xml  package.xml  utacc_gazebo.rviz
pd_local_planner/cfg/: PDPlanner.cfg
pd_local_planner/src/: pd_planner.cpp
segbot_2dnav/: CMakeLists.txt  package.xml
segbot_2dnav/config/: base_local_planner_params.yaml  costmap_common_base_and_tilt_params.yaml  costmap_common_base_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.yaml  non-uniform_circular_1_1_er0p1.mprim  sbpl_global_params.yaml  segbot-nonuniform.mprim  uni_circ_test.mprim
segbot_2dnav/launch/: segbot.launch  segbot_base.launch  segbot_control.launch  segbot_hardware.launch  segbot_launch.launch  segbot_localization.launch  segbot_move_base.launch  segbot_navigation.launch
segbot_2dnav/scripts/: enable_hokuyo.sh
segbot_2dnav/src/: main.cpp
segbot_2dnav/udev-rules/: 99-segbot.rules  README.txt
segbot_control/: CMakeLists.txt  package.xml
segbot_control/config/: segbot_control.yaml
segbot_control/launch/: segbot_control.launch  segbot_control_base.launch
segbot_description/: CMakeLists.txt  package.xml
segbot_description/gazebo/: gazebo.urdf.xacro
segbot_description/launch/: segbot_move_base.launch  segbot_no_arm_move_base.launch
segbot_description/meshes/: finger_tip.stl
segbot_description/robots/: segbot.launch  segbot.urdf.xacro  segbot_no_arm.launch  segbot_no_arm.urdf.xacro  segbot_with_arm.urdf.xacro  segbot_with_table_mounted_lidar.urdf.xacro  segbot_without_arm.urdf.xacro  upload_segbot.launch
segbot_description/urdf/: arm.urdf.xacro  base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro  base_table_mounted_laser.urdf.xacro  gazebo.urdf.xacro  hand.urdf.xacro  sensors.gazebo.xacro  sensors.urdf.xacro
segbot_gazebo/: CMakeLists.txt  package.xml
segbot_gazebo/launch/: empty_world.launch  segbot_world.launch
segbot_gazebo/scripts/: reset_segbot
segbot_gazebo/src/: tilt_laser_node.cpp  twist_ned_transformer.cpp
segbot_gazebo/worlds/: segbot.world
segbot_ipc/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
segbot_ipc/src/: segbot_ipc.cpp
segbot_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
segbot_msgs/msg/: ServoAngle.msg  ServoCmd.msg
segbot_stage/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
segbot_stage/config/: NSH_A_lvl_clear.rviz  amcl.yaml  base_local_planner_params.yaml  costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  map_server.yaml  move_base.yaml  move_base2.yaml  navfn_params.yaml  sbpl_global_params.yaml  segbot.mprim
segbot_stage/launch/: amcl.launch  map_server.launch  move_base.launch  move_base2.launch  segbot_stage.launch  stage.launch  stage2.launch  teleop.launch
segbot_stage/src/: teleop_joystick.cpp  teleop_pr2_keyboard.cpp
segbot_stage/worlds/: NSH_A_lvl_clear.world  basement.world
segway_robot/: CMakeLists.txt  issues  mainpage.dox  manifest.xml  package.xml  segbot.launch  segbot.machine  segbot.urdf.xacro  segbot_move_base.launch  segbot_no_arm.launch  segbot_no_arm.urdf.xacro  segbot_no_arm_move_base.launch  segbot_old_no_arm.urdf.xacro  segbot_with_arm.urdf.xacro  segbot_with_table_mounted_lidar.urdf.xacro  segbot_without_arm.urdf.xacro  willowMap.pgm
segway_robot/config/: amcl_node.xml  costmap_common_params.yaml
segway_robot/defs/: arm.urdf  base.urdf  base_table_mounted_laser.urdf  base_table_mounted_laser.urdf~  gazebo.urdf  hand.urdf  sensors.urdf
segway_robot/gazebo/: gazebo.urdf.xacro
segway_robot/launch/: segbot_move_base.launch  segbot_no_arm_move_base.launch
segway_robot/meshes/: R283_hokuyo_laser1.stl  R313_hokuyo_laser2.stl  arm_base.stl  battery_one.stl  battery_two.stl  computer.stl  distal_knuckle.stl  elbow_lift.stl  forearm_roll.stl  hand_base.stl  laser_bracket.stl  proximal_knuckle.stl  proximal_link.stl  segway_base.stl  segway_wheel.stl  shoulder_pan.stl  shoulder_pitch.stl  spread_joint.stl  trailer.stl  trailer_wheel.stl  trailer_wheel_caster.stl  upper_arm_roll.stl  wrist_pitch.stl  wrist_roll.stl
segway_robot/move_base/: base_local_planner_params.yaml  base_local_planner_params_close.yaml  base_local_planner_params_close_path.yaml  base_local_planner_params_slow.yaml  bighall.yaml  hallway.yaml  move_base.xml  (+9 more)
segwayrmp/: CMakeLists.txt  canio.h  canio_rmpusb.cc  canio_rmpusb.h  manifest.xml  odom_test.cpp  rmp_frame.h  segwayrmp.cpp  segwayrmp.h  test_usb.cc
servo_controller/: CMakeLists.txt  controller_plugins.xml  manifest.xml  package.xml  servo_controller.launch  servo_controller.yaml
servo_node/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
servo_sim_controller/: CMakeLists.txt  controller_plugins.xml  mainpage.dox  manifest.xml  package.xml  servo_sim_controller.launch  servo_sim_controller.yaml
(+84 files in other folders)
