<package format="2">
    <name>base_sim_controller</name>
    <version>0.0.0</version>
    <description>base_sim_controller</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Penn</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>pr2_controller_interface</depend>
    <depend>pr2_mechanism_model</depend>
    <depend>tf</depend>

    <export>
        <pr2_controller_interface plugin="${prefix}/controller_plugins.xml" />
    </export>
</package>
