<package format="2">
    <name>command_velocity_filter</name>
    <version>0.0.0</version>
    <description>
        This node filters out jerky command velocities meant for segbot by
        publishing smoother versions of them, while obeying desginated
        acceleration limits.
    </description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Brian MacAllister</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
  
    <depend>geometry_msgs</depend>
    <depend>pr2_controllers_msgs</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>topic_tools</depend>
</package>
