<?xml version="1.0"?>
<package>
  <name>segbot_gazebo</name>
  <version>0.0.0</version>
  <description>The segbot_gazebo package</description>

  <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
  <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
