<package format="2">
    <name>segbot_ipc</name>
    <version>0.0.0</version>
    <description>segbot_ipc</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Michael Phillips</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>tf</depend>
</package>
