<package format="2">
    <name>servo_controller</name>
    <version>0.0.0</version>
    <description>servo_controller</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Penn</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>pluginlib</depend>
    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>segbot_msgs</depend>
    <depend>tf</depend>

    <export>
        <controller_interface plugin="${prefix}/controller_plugins.xml"/>
    </export>
</package>


