<package format="2">
    <name>servo_node</name>
    <version>0.0.0</version>
    <description>servo_node</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Michael Phillips</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>segbot_msgs</depend>
</package>
